--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:description" content="Your one-stop shop for all your Roblox toy code needs. Looking for the elusive Redvalk or other exclusive Roblox toy code items? This is the place." />
     <meta property="og:url" content="https://shopblox.gg" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="https://shopblox.gg/preview.png" />
+    <meta property="og:image" content="https://shopblox.gg/images/preview.png" />
     <meta property="og:type" content="website" />
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="ShopBlox - Purchase Roblox Toy Codes Quickly and Safely" />
     <meta name="twitter:description" content="Your one-stop shop for all your Roblox toy code needs. Looking for the elusive Redvalk or other exclusive Roblox toy code items? This is the place." />
-    <meta name="twitter:image" content="https://shopblox.gg/preview.png" />
+    <meta name="twitter:image" content="https://shopblox.gg/images/preview.png" />
     
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="16x16" />
